force-app/main/default/objects/Contract_Performance_SLA_COA__c/Contract_Performance_SLA_COA__c.object-meta.xml
<CustomObject>
    <description>Capture Service Level Agreement and Certificate of Assurance for Contract Agreements</description>
    <label>Contract Performance SLA/ COA</label>
    <nameField>
        <displayFormat>SLA-COA-{000000}</displayFormat>
        <label>Contract Performance SLA/ COA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Performance SLAs/ COAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>