force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Performance_SLAs_COAs</relationshipName>
    <type>Lookup</type>
</CustomField>