force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Contract_Performance_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Performance_Agreement__c</fullName>
    <label>Contract Performance Agreement</label>
    <referenceTo>Contract_Performance_Agreement__c</referenceTo>
    <relationshipLabel>Contract Performance SLAs/ COAs</relationshipLabel>
    <relationshipName>Contract_Performance_SLAs_COAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>