force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Contract_Performance_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Performance_Agreement_Name__c</fullName>
    <formula>Contract_Performance_Agreement__r.Performance_Agreement_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Performance Agreement Name</label>
    <type>Text</type>
</CustomField>