force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Contract_Performance_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Performance_Measurement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Performance Measurement</label>
    <referenceTo>Contract_Performance_Measurement__c</referenceTo>
    <relationshipLabel>Contract Performance SLAs/ COAs</relationshipLabel>
    <relationshipName>Contract_Performance_SLAs_COAs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>