force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Create_New_Result_Records__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Result_Records__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If set to True , on save New Results records will be created for the Due Date, if no records exist for that date</inlineHelpText>
    <label>Create New Result Records</label>
    <type>Checkbox</type>
</CustomField>