force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Performance_Cycle</valueSetName>
    </valueSet>
</CustomField>