force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Cycle_Specific_Week__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Specific_Week__c</fullName>
    <label>Cycle Specific Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Week_of_Month</valueSetName>
    </valueSet>
</CustomField>