force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Due_Date_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Reminder__c</fullName>
    <label>Due Date Reminder</label>
    <type>DateTime</type>
</CustomField>