force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Lead_Time_Reminder_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Reminder_in_Days__c</fullName>
    <label>Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>