force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <formula>Contract_Performance_Agreement__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>