force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Measurement_Description__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Description__c</fullName>
    <formula>Contract_Performance_Measurement__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Measurement Description</label>
    <type>Text</type>
</CustomField>