force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Measurement_Name__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Name__c</fullName>
    <formula>Contract_Performance_Measurement__r.Measurement_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Measurement Name</label>
    <type>Text</type>
</CustomField>