force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/Re_calculate_DueDate__c.field-meta.xml
<CustomField>
    <fullName>Re_calculate_DueDate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dates are defaulted to start of week. This can take the due date to the previous month if start of that week is in the previous month. For example if start of month is on a Friday, the start of week will be on the 27th of previous month.</inlineHelpText>
    <label>Re-calculate Next DueDate</label>
    <type>Checkbox</type>
</CustomField>