force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/TriggerTimeBasedWorkflow__c.field-meta.xml
<CustomField>
    <fullName>TriggerTimeBasedWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerTimeBasedWorkflow</label>
    <type>Checkbox</type>
</CustomField>