force-app/main/default/objects/Contract_Performance_SLA_COA__c/fields/TriggerTimeBasedWorkflowSetNextFlag__c.field-meta.xml
<CustomField>
    <fullName>TriggerTimeBasedWorkflowSetNextFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerTimeBasedWorkflowSetNextFlag</label>
    <type>Checkbox</type>
</CustomField>