force-app/main/default/objects/Contract_Performance_SLA_COA__c/recordTypes/COA.recordType-meta.xml
<RecordType>
    <fullName>COA</fullName>
    <active>true</active>
    <description>Certificate of Assurance</description>
    <label>COA</label>
</RecordType>