force-app/main/default/objects/Contract_Performance_SLA_COA__c/recordTypes/SLA.recordType-meta.xml
<RecordType>
    <fullName>SLA</fullName>
    <active>true</active>
    <description>Service Level Agreement</description>
    <label>SLA</label>
</RecordType>