force-app/main/default/objects/Contract_Performance_SLA_COA__c/validationRules/Assigned_to_is_required_for_COA.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_to_is_required_for_COA</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Assigned_To__c) &amp;&amp;  RecordType.Name = &quot;COA&quot;</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>Assigned To is required</errorMessage>
</ValidationRule>