force-app/main/default/objects/Contract_Performance_SLA_COA__c/validationRules/Duedate_between_StartEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Duedate_between_StartEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL( Due_Date__c ) &amp;&amp; (
!ISNULL(Contract_Performance_Start_Date__c) &amp;&amp;  Due_Date__c &lt; Contract_Performance_Start_Date__c
||(
!ISNULL(Contract_Performance_End_Date__c) &amp;&amp; 
 Due_Date__c &gt; Contract_Performance_End_Date__c
)
)</errorConditionFormula>
    <errorMessage>Due Date needs to be between Start date and End Date</errorMessage>
</ValidationRule>