force-app/main/default/objects/Contract_Performance_SLA_COA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Performance_Agreement_Name__c</columns>
    <columns>Contract_Performance_Measurement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>